fixed bug of forecasts extending the viewport if it does not fit

--- a/styles/partials/main/body/_forecasts.scss
+++ b/styles/partials/main/body/_forecasts.scss
@@ -2,6 +2,7 @@
     overflow: hidden;
     margin-bottom: 40px;
     width: fit-content;
+    max-width: 100%;
 }
 
 .forecasts {
