--- a/styles/partials/main/body/forecasts-menu/_forecasts-legend.scss
+++ b/styles/partials/main/body/forecasts-menu/_forecasts-legend.scss
@@ -1,3 +1,6 @@
+.forecasts-legend {
+    font-family: sans-serif;
+}
 .legend-module {
     position: fixed;
     top: 0;
@@ -15,7 +18,6 @@
 .legend {
     font-size: 1rem;
     color: #fff;
-    font-family: sans-serif;
     background-color: #000;
     border-radius: 50px;
     padding: 1rem 2rem;
